Fixed iframe width and height should now not glitch on mobile devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,6 +63,11 @@ body
   /*background-image: url('images/background.jpg');*/
   background-color:black;
 }
+iframe
+{
+  width: 80vw;
+  height:80vh;
+}
 
 .main-menu
 {
